fix: fixed slider height on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -966,5 +966,8 @@ template {
   .hotel__slider {
     margin-bottom: 20px;
   }
+  .slider {
+    height: 179px;
+  }
 }
 /*# sourceMappingURL=style.css.map */
