--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -102,3 +102,5 @@
   .hotel
     &__slider
       margin-bottom: 20px
+  .slider
+    height: 179px
